--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "binance_rs"
+name = "market_ws_dump"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix = "0.13.0"
+anyhow = "1.0.72"
 awc = { version = "3.1.1", features = ["tls-rustls", "rustls"] }
 fern = "0.6.2"
 futures-util = "0.3.28"
